--- a/Auto/Auto.csproj
+++ b/Auto/Auto.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Auto</AssemblyName>
     <Product>Auto is an Among Us Mod Menu</Product>
-    <Version>1.0.0Alpha1</Version>
+    <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
